<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateProfileActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true">


        <TextView
            android:id="@+id/profile_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/create_user_header_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="#E60000"/>

        <TextView
            android:id="@+id/user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/profile_header"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="10dp"
            android:text="@string/user_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/user_text"
            android:layout_width="@dimen/edittext_default_width"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/user_label"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_toRightOf="@+id/user_label"
            android:hint="@string/user_hint"
            android:textAppearance="?android:attr/textAppearanceMedium">
        </EditText>

        <TextView
            android:id="@+id/new_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/user_label"
            android:layout_below="@+id/user_label"
            android:layout_marginTop="40dp"
            android:text="@string/password_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/new_password_text"
            android:layout_width="@dimen/edittext_default_width"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/new_password_label"
            android:layout_alignLeft="@+id/user_text"
            android:layout_alignRight="@+id/user_text"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/user_label"
            android:layout_below="@+id/new_password_label"
            android:layout_marginTop="40dp"
            android:text="@string/confirm_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/confirm_password_text"
            android:layout_width="@dimen/edittext_default_width"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/confirm_password_label"
            android:layout_alignLeft="@+id/user_text"
            android:layout_alignRight="@+id/user_text"
            android:hint="@string/confirm_hint"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ImageView
            android:id="@+id/ok_create_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ok_button"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/confirm_password_text"
            android:layout_alignRight="@+id/user_text"
            />

    </RelativeLayout>

</RelativeLayout>
